[package]
name = "zond-engine"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/zond-rs/zond-engine"
description = "A lightweight, fast, and highly concurrent networking backend for packet crafting, protocol fingerprinting, and host discovery."

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.86"
colored = "3.1.1"
clap = { version = "4.5.45", features = ["derive"] }
pnet = "0.35.0"
rand = "0.10.2"
indicatif = "0.18.0"
console = "0.16.1"
thiserror = "2.0.11"
crossterm = "0.29.0"
rayon = "1.11.0"
tracing = "0.1.44"
tokio = { version = "1.51.1", features = ["full"] }
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
is-root = "0.1.3"
sysinfo = "0.38.0"
windows-sys = { version = "0.61.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
mac_oui = { version = "0.4.7", features = ["with-db"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
dns-parser = "0.8"
toml = "1.1.2"
regex = "1.12.3"

[dev-dependencies]
proptest = "1.6.0"

[build-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
