[package]
name = "zond-core"
version = "0.1.6"
edition = "2024"

[dependencies]
zond-common = { workspace = true }
zond-protocols = { workspace = true }
zond-plugins = { workspace = true }
tokio = { workspace = true }
pnet = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
is-root = "0.1.3"


sysinfo = "0.29.10"



