[package]
name = "zond-core"
version = "0.1.6"
edition.workspace = true 
license.workspace = true

[dependencies]
zond-common = { workspace = true }
zond-protocols = { workspace = true }
zond-plugins = { workspace = true }
pnet = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

tokio = { version = "1.47.1", features = ["full"] }
hickory-resolver = "0.25.2"
is-root = "0.1.3"
sysinfo = "0.38.0"



