[package]
name = "zond-core"
version = "0.1.4"
edition.workspace = true 
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
pnet = { workspace = true }
crossterm = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

rand = "0.9.2"
mac_oui = { version = "0.4.7", features = ["with-db"] }
windows-sys = { version = "0.61.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_NetworkManagement_Ndis"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
proptest = "1.6.0"
