[package]
name = "zond-engine"
version = "0.2.0"
edition.workspace = true 
license.workspace = true

[dependencies]
zond-core = { workspace = true }
zond-protocols = { workspace = true }
zond-plugins = { workspace = true }
zond-system = { workspace = true }
pnet = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

tokio = { version = "1.47.1", features = ["full"] }
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
is-root = "0.1.3"
sysinfo = "0.38.0"
windows-sys = { version = "0.61.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock"] }



