[package]
name = "zond-plugins"
version = "0.1.0"
edition.workspace = true 
license.workspace = true

[dependencies]
zond-common = { workspace = true }
zond-protocols = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = "1.0.228"
toml = "1.1.2"
bincode = "1.3.3"
regex = "1.12.3"
tokio = { version = "1.51.1", features = ["full"] }

[build-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
