[package]
name = "zond-protocols"
version = "0.1.2"
edition.workspace = true 
license.workspace = true

[dependencies]
zond-common = { workspace = true }
pnet = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

dns-parser = "0.8"
